# Independent-Project

iosdevelopment/Attributor/Attributor/: AttributorAppDelegate.h  AttributorAppDelegate.m  AttributorViewController.h  AttributorViewController.m  TextStatsViewController.h  TextStatsViewController.m  main.m
iosdevelopment/Attributor/Attributor.xcodeproj/: project.pbxproj
iosdevelopment/Attributor/Attributor.xcodeproj/project.xcworkspace/xcuserdata/Kacey.xcuserdatad/: UserInterfaceState.xcuserstate
iosdevelopment/Attributor/Attributor.xcodeproj/xcuserdata/Kacey.xcuserdatad/xcschemes/: Attributor.xcscheme  xcschememanagement.plist
iosdevelopment/Attributor/Attributor/Base.lproj/: Main.storyboard
iosdevelopment/Attributor/AttributorTests/: AttributorTests.m
iosdevelopment/CardGame/CardGame/: CardGame-Info.plist  CardGameAppDelegate.h  CardGameAppDelegate.m  CardGameViewController.h  CardGameViewController.m  PlayingCardGameViewController.h  PlayingCardGameViewController.m  main.m
iosdevelopment/CardGame/CardGame.xcodeproj/: project.pbxproj
iosdevelopment/CardGame/CardGame.xcodeproj/project.xcworkspace/xcshareddata/: CardGame.xccheckout
iosdevelopment/CardGame/CardGame.xcodeproj/project.xcworkspace/xcuserdata/Kacey.xcuserdatad/: UserInterfaceState.xcuserstate
iosdevelopment/CardGame/CardGame.xcodeproj/xcuserdata/Kacey.xcuserdatad/xcschemes/: CardGame.xcscheme  xcschememanagement.plist
iosdevelopment/CardGame/CardGame/Base.lproj/: Main.storyboard
iosdevelopment/CardGame/CardGame/Images.xcassets/cardFront.imageset/: Contents.json
iosdevelopment/CardGame/CardGame/Model/: Card.h  Card.m  CardMatchingGame.h  CardMatchingGame.m  Deck.h  Deck.m  PlayingCard.h  PlayingCard.m  PlayingCardDeck.h  PlayingCardDeck.m
iosdevelopment/CardGame/CardGameTests/: CardGameTests-Info.plist  CardGameTests.m
iosdevelopment/slides/keynote/UISegmentedControl.key/Metadata/: DocumentIdentifier  Properties.plist
particlesystem/: CMakeLists.txt  README  contributors.txt
particlesystem/docs/: CMakeLists.txt  Doxyfile.in
particlesystem/include/: CMakeLists.txt  curve.h  particle.h  particlePath.h  point.h
particlesystem/lib/: CMakeLists.txt
particlesystem/particleViewer/: Camera.cpp  Camera.h  Makefile  Model.cpp  Model.h  SimData.cpp  SimData.h  assign1  assign1.cpp
particlesystem/simData/: sim.xml
particlesystem/src/: CMakeLists.txt  curve.cpp  particle.cpp  particlePath.cpp  point.cpp
particlesystem/test/: Makefile  main.cpp  run
