FIND_PACKAGE( Doxygen)

IF( DOXYGEN_FOUND)
  CONFIGURE_FILE( ${PROJECT_SOURCE_DIR}/docs/Doxyfile.in ${PROJECT_BINARY_DIR}/Doxyfile @ONLY)
        ADD_CUSTOM_TARGET( doc ALL ${DOXYGEN_EXECUTABLE} ${PROJECT_BINARY_DIR}/Doxyfile
                            WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
                            COMMENT "Generating API documentation with Doxygen" VERBATIM)
INSTALL(DIRECTORY ${PROJECT_BINARY_DIR}/docs DESTINATION ${CMAKE_INSTALL_PREFIX})
ENDIF()
